# HistogramEqualization

./: .gitignore  .~lock.Dokumentation.odt#  CMakeLists.txt  CudaHistogramTools.cu  CudaHistogramTools.h  CudaImageTools.cu  CudaImageTools.h  Dokumentation.odt  HistogramBenchmarking.cu  HistogramTools.cpp  README.md  cublasDotProduct.cu  main.cpp  main.cu
Benchmark/: 0.pgm  0CUDA_Normalized.pgm  1.pgm  10.pgm  10.ppm  10CPU_Equalized.pgm  10CPU_Normalized.pgm  10CUDA_Equalized_RGB.ppm  11.pgm  11.ppm  11CPU_Equalized_RGB.ppm  11CPU_Normalized.ppm  11CUDA_Equalized.pgm  11CUDA_Equalized.ppm  11CUDA_Normalized.pgm  11CUDA_Normalized.ppm  12.pgm  12CPU_Normalized.pgm  13.pgm  13.ppm  13CPU_Equalized.ppm  13CPU_Normalized.ppm  13CUDA_Equalized.pgm  13CUDA_Normalized.pgm  13CUDA_Normalized.ppm  16.pgm  16CUDA_Equalized.pgm  18.pgm  18.ppm  18CPU_Normalized.pgm  18CPU_Normalized.ppm  18CUDA_Equalized.pgm  18CUDA_Normalized_RGB.ppm  19.pgm  19.ppm  19CPU_Equalized.pgm  19CPU_Equalized.ppm  19CPU_Normalized.ppm  19CPU_Normalized_RGB.ppm  1CPU_Equalized.pgm  (+98 more)
cpp/: HistogramTools.h  ImageTools.cpp  ImageTools.h
cuda/: CMakeLists.txt  CudaErrorHelper.h  CudaHistogramTools.cu  CudaHistogramTools.h  CudaImageTools.cu  CudaImageTools.h  Dokumentation.odt  EqualizationTest.cu  HistogramBenchmarking.cu  main.cu
